final zmiana nazwy

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "olcia90079-check_url",
+  "name": "labyfroncik-apanek",
   "version": "1.0.0",
   "description": "a package checking whether a URL is a correct one",
   "main": "index.js",
